add new device fonctions

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,23 +9,26 @@
         android:roundIcon="@mipmap/ic_logo_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity
-            android:name=".CommunityActivity"
-            android:label="@string/forumlabel"
-            android:theme="@style/nav"
-            android:icon="@drawable/ic_group_black_24dp"/>
-        <activity
-            android:name=".ProfileActivity"
-            android:label="@string/profillabel"
-            android:theme="@style/nav"
-            android:icon="@drawable/ic_account_circle_black_24dp"/>
-        <activity android:name=".addHardwareActivity" />
+
+        <activity android:name=".FooterActivity" />
         <activity
             android:name=".HomepageActivity"
             android:label="@string/feedpage_title" />
+        <activity
+            android:name=".CommunityActivity"
+            android:icon="@drawable/ic_group_black_24dp"
+            android:label="@string/forumlabel"
+            android:theme="@style/nav" />
+        <activity
+            android:name=".ProfileActivity"
+            android:icon="@drawable/ic_account_circle_black_24dp"
+            android:label="@string/profillabel"
+            android:theme="@style/nav" />
         <activity android:name=".RegistrationActivity" />
         <activity android:name=".AddDeviceActivity" />
-        <activity android:name=".MainActivity">
+        <activity
+            android:name=".MainActivity"
+            android:label="e-Regulator">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
